SQL  composite search key index

--- a/SQL Database Indexing & B Tree/数据库系统概念.md
+++ b/SQL Database Indexing & B Tree/数据库系统概念.md
@@ -37,3 +37,13 @@
     * 否则不做任何操作
 * 删除
   * 稠密索引
+
+### 11.2.5 多码上的索引(联合索引)
+* 字典序(lexicographic order), 所以有最左匹配原则
+
+## 11.5 多码(composite search key)访问
+* 使用多个单列索引的查询策略(SELECT A, B from table where A > 1 and B > 2)
+  1. 使用索引A, 然后在结果中搜索B
+  2. 使用索引B, 然后再结果中搜索A
+  3. 同时使用索引A和B, 然后取它们的交集
+  * 只有第三种方法实际利用到了多个索引，但是这也是有缺陷的，如果其中一个结果数量很多或很少，效率不如直接只使用一个索引
