High perfromance MySQL

--- a/SQL Database Indexing & B Tree/数据库系统概念.md
+++ b/SQL Database Indexing & B Tree/数据库系统概念.md
@@ -47,3 +47,10 @@
   2. 使用索引B, 然后再结果中搜索A
   3. 同时使用索引A和B, 然后取它们的交集
   * 只有第三种方法实际利用到了多个索引，但是这也是有缺陷的，如果其中一个结果数量很多或很少，效率不如直接只使用一个索引
+* 使用多列索引 
+  1. 多列'='查询可以利用多列索引
+  2. 最左'='查询可以利用多列索引，包括仅有部分最左的情况
+  3. 最左range查询不能利用多列索引
+
+### 11.5.3 覆盖索引(covering index)
+* 在索引中存储一些实际的数据，只访问索引不访问table就可以查询到数据
